--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
 blinker==1.4
-docutils==0.14
+colorama==0.4.4
+commonmark==0.9.1
+docutils==0.18.1
 feedgenerator==1.9
 Jinja2==2.11.3
 Markdown==3.1
 MarkupSafe==1.1.1
-pelican==4.0.1
+pelican==4.7.1
 Pygments==2.7.4
 python-dateutil==2.8.0
-pytz==2019.1
+pytz==2021.3
+rich==11.0.0
 six==1.12.0
-Unidecode==1.0.23
+Unidecode==1.3.2
